item + link update

--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
     <body>
         <div class="container">
             <img src="/assets/gliscor.gif" alt="gliscor">
-            <input type="text" id="input-field" placeholder="Hello">
-            <button id="add-button">Add to cart</button>
-            <ul id="shopping-list"></ul>
+            <input type="text" id="input-field" placeholder="Item">
+            <input type="text" id="link-field" placeholder="Link">
+            <div class="button-container">
+                <button id="add-button" class="shopping-button">Add</button>
+                <button id="clear-button" class="shopping-button">Clear</button>
+            </div>
+            <ul id="shopping-list">
+            </ul>
         </div>
         <script src="script.js" type="module"></script
     </body>
