--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Gliscor</title>
+        <title>PokeWalker</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="container">
-            <img src="/assets/gliscor.gif" alt="gliscor">
+            <img src="./assets/gliscor.gif" alt="gliscor">
             <input type="text" id="input-field" placeholder="Item">
             <input type="text" id="link-field" placeholder="Link">
             <div class="button-container">
