--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 <html lang="en">
     <head>
         <title>PokeWalker</title>
-        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+        <meta charset="UTF-8">
+        <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
+        <link rel="manifest" href="./assets/favicon/site.webmanifest">
+        <link rel="stylesheet" href="index.css">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="container">
             <img src="./assets/gliscor.gif" alt="gliscor">
-            <input type="text" id="input-field" placeholder="Item">
-            <input type="text" id="link-field" placeholder="Link">
-            <div class="button-container">
-                <button id="add-button" class="shopping-button">Add</button>
-                <button id="clear-button" class="shopping-button">Clear</button>
-            </div>
-            <ul id="shopping-list">
-            </ul>
+            <input type="text" id="input-field" placeholder="Item">            <div class="button-container">
+            <button id="add-button" class="shopping-button">Add</button>
+            <ul id="shopping-list"></ul>
+            <button id="clear-button" class="shopping-button">Clear</button>
         </div>
         <script src="script.js" type="module"></script
     </body>
