--- a/shopping.html
+++ b/shopping.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Pokemon Home</title>
+        <title>Shopping List</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,18 +11,20 @@
         <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
         <link rel="manifest" href="./assets/favicon/site.webmanifest">
-        <link rel="stylesheet" href="indexstyle.css">
+        <link rel="stylesheet" href="shoppingstyle.css">
     </head>
-<body>
-    <div class="container">
-        <img src="./assets/gliscor.gif" alt="" class="pokemon">
-        <div class="button-container">
-            <a href="shopping.html"><button class="button">Shopping List</button></a>
-            <a href="shopping.html"><button class="button">Shopping List</button></a>
-            <a href="shopping.html"><button class="button">Shopping List</button></a>
-            <a href="shopping.html"><button class="button">Shopping List</button></a>
+    <body>
+        <div class="top-menu">
+            <a href="index.html"><button class="back-button">Back</button></a>  
+
         </div>
-        
-    </div>
-</body>
+        <div class="container">  
+            <img src="./assets/gliscor.gif" alt="gliscor">
+            <input type="text" id="input-field" placeholder="Item">            <div class="button-container">
+            <button id="add-button" class="shopping-button">Add</button>
+            <ul id="shopping-list"></ul>
+            <button id="clear-button" class="shopping-button">Clear</button>
+        </div>
+        <script src="shoppingscript.js" type="module"></script
+    </body>
 </html>
