--- a/shopping.html
+++ b/shopping.html
@@ -25,6 +25,6 @@
             <ul id="shopping-list"></ul>
             <button id="clear-button" class="shopping-button">Clear</button>
         </div>
-        <script src="shoppingscript.js" type="module"></script
+        <script src="shoppingscript.js" type="module"></script>
     </body>
 </html>
