--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <script src="indexscript.js" type="module"></script>
         <link rel="stylesheet" href="indexstyle.css">
     </head>
+
     <body>
         </nav>
         <div class="container">
@@ -21,7 +22,7 @@
                 <button class="link" data-dropdown-button></button>
                 <div class="dropdown-menu">   
                     <div class="information-grid">
-                        <button onclick="toggleMenu()" class="pokemon-button button1"></button>
+                        <button class="pokemon-button button1"></button>
                         <button href="" class="pokemon-button button2"></button>
                         <button href="" class="pokemon-button button3"></button>
                         <button href="" class="pokemon-button button4"></button>
