--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             </div>
             <div class="button-container">
                 <a href="shopping.html"><button class="button">Shopping List</button></a>
-                <a href="shopping.html"><button class="button">Shopping List</button></a>
-                <a href="shopping.html"><button class="button">Shopping List</button></a>
-                <a href="shopping.html"><button class="button">Shopping List</button></a>
+                <a href=""><button class="button"></button></a>
+                <a href=""><button class="button"></button></a>
+                <a href=""><button class="button"></button></a>
             </div>
         </div>
     </body>
